feat: create loans api
