# internal/model/customers.go
@@ -19,8 +19,8 @@ type Customer struct {
 	CreatedAt    time.Time `gorm:"not null" json:"created_at"`
 	UpdatedAt    time.Time `json:"updated_at"`
 
-	Tenors       []Tenor       `gorm:"foreignKey:CustomerID" json:"tenors,omitempty"`
-	Transactions []Transaction `gorm:"foreignKey:CustomerID" json:"transactions,omitempty"`
+	Tenors []Tenor `gorm:"foreignKey:CustomerID" json:"tenors,omitempty"`
+	Loans  []Loan  `gorm:"foreignKey:CustomerID" json:"loans,omitempty"`
 }
 
 func (Customer) TableName() string {
