# internal/model/transactionts.go
@@ -3,19 +3,14 @@ package model
 import "time"
 
 type Transaction struct {
-	ID                uint      `gorm:"primaryKey" json:"id"`
-	CustomerID        uint      `gorm:"not null;index" json:"customer_id"`
-	ContractNumber    string    `gorm:"type:varchar(32);not null;index" json:"contract_number"`
-	OTR               float64   `gorm:"type:decimal(12,2);not null" json:"otr"`
-	AdminFee          float64   `gorm:"type:decimal(12,2);not null" json:"admin_fee"`
-	InstallmentAmount float64   `gorm:"type:decimal(12,2);not null" json:"installment_amount"`
-	InterestAmount    float64   `gorm:"type:decimal(12,2);not null" json:"interest_amount"`
-	AssetsName        string    `gorm:"type:varchar(32);not null" json:"assets_name"`
-	TenorMonths       uint8     `gorm:"not null" json:"tenor_months"`
-	CreatedAt         time.Time `gorm:"not null" json:"created_at"`
-	UpdatedAt         time.Time `json:"updated_at"`
+	ID             uint      `gorm:"primaryKey;autoIncrement" json:"id"`
+	LoanID         uint      `gorm:"not null" json:"loan_id"`
+	Amount         float64   `gorm:"type:decimal(12,2);not null" json:"amount"`
+	InterestAmount float64   `gorm:"type:decimal(12,2);not null" json:"interest_amount"`
+	CreatedAt      time.Time `gorm:"not null" json:"created_at"`
+	UpdatedAt      time.Time `gorm:"type:datetime" json:"updated_at"`
 
-	Customer Customer `gorm:"foreignKey:CustomerID" json:"-"`
+	Loan Loan `gorm:"foreignKey:LoanID" json:"loan,omitempty"`
 }
 
 func (Transaction) TableName() string {
